[package]
name = "game_engine"
version = "0.1.0"
authors = ["jujug"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.14.0"
winit = "0.19.3"
vulkano-win = "0.14.0"
vulkano-shaders = "0.14.0"
cgmath = "0.17.0"
image = "0.22.2"